; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_init_timer_key.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_init_timer_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_list = type { i32 }
%struct.lock_class_key = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_timer_key(%struct.timer_list* %0, i8* %1, %struct.lock_class_key* %2) #0 {
  %4 = alloca %struct.timer_list*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.lock_class_key*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.lock_class_key* %2, %struct.lock_class_key** %6, align 8
  %7 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %8 = call i32 @debug_init(%struct.timer_list* %7)
  %9 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load %struct.lock_class_key*, %struct.lock_class_key** %6, align 8
  %12 = call i32 @__init_timer(%struct.timer_list* %9, i8* %10, %struct.lock_class_key* %11)
  ret void
}

declare dso_local i32 @debug_init(%struct.timer_list*) #1

declare dso_local i32 @__init_timer(%struct.timer_list*, i8*, %struct.lock_class_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
